add_get_information
